--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sappho Poetry Fragment Generator</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <main class="container">
+    <h1 class="title">Sappho Poetry Fragment Generator</h1>
 
+    <div class="generator-frame">
+      <div id="poem-box" class="poem-box">
+        Click the button to reveal a fragment from Sappho ✨
+      </div>
+      <button id="poem-button" class="btn">Reveal Fragment</button>
+    </div>
+
+    <div class="statue-container">
+      <img src="venus-statue.png" alt="Greek Statue" class="statue" />
+    </div>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
+<footer class="footer">
+  <p>
+    © adaeze i. — Texts adapted from Edwin Marion Cox's (1925) translations of Sappho's poetry.<br />
+    Licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener noreferrer">CC BY-NC-ND 4.0</a>.
+  </p>
+</footer>
