--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="statue-container">
-      <img src="venus-statue.png" alt="Greek Statue" class="statue" />
+      <img src="venus-de-milo.png" alt="Aphrodite Statue" class="statue" />
     </div>
   </main>
 
