--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sappho Poetry Fragment Generator</title>
+  <title>Sappho Poetry Generator</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -13,7 +13,7 @@
 
     <div class="generator-frame">
       <div id="poem-box" class="poem-box">
-        Click the button to reveal a fragment from Sappho ✨
+        Click the button to reveal a fragment from Sappho ✦
       </div>
       <button id="poem-button" class="btn">Reveal Fragment</button>
     </div>
