--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main class="container">
-    <h1 class="title">Sappho Poetry Fragment Generator</h1>
+    <h1 class="title">Sappho Poetry Generator</h1>
 
     <div class="generator-frame">
       <div id="poem-box" class="poem-box">
