--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="statue-container">
-      <img src="images/venus-de-milo.png" alt="Aphrodite Statue" class="statue"/>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Venus_de_Milo_Louvre_Ma399_n4.jpg" alt="Aphrodite Statue" class="statue"/>
     </div>
   </main>
 
