--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
 <footer class="footer">
   <p>
-    © adaeze i. — Texts adapted from Edwin Marion Cox's (1925) translations of Sappho's poetry.<br />
-    Licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener noreferrer">CC BY-NC-ND 4.0</a>.
+    <br>Texts adapted from Edwin Marion Cox's (1925) translations of Sappho's poetry.<br/>
   </p>
 </footer>
 
